--- a/Kismat App/MainViewController/Xibs/SocialAccTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/SocialAccTVCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,18 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="SocialAccTVCell" customModule="Kismat_App" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="SocialAccTVCell" customModule="Kismmet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="40"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Etf-qw-z7o">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="40"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JBx-0C-JSa">
-                                <rect key="frame" x="23" y="4" width="290" height="32"/>
+                                <rect key="frame" x="23" y="4" width="338" height="32"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LinkedIn" translatesAutoresizingMaskIntoConstraints="NO" id="DRK-EB-vxd">
                                         <rect key="frame" x="8" y="4" width="25" height="25"/>
@@ -32,18 +32,18 @@
                                             <constraint firstAttribute="width" constant="25" id="xfN-hi-oLT"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Du-xK-9Cz" customClass="FormTextField" customModule="Kismat_App" customModuleProvider="target">
-                                        <rect key="frame" x="50" y="6" width="206" height="21"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Du-xK-9Cz" customClass="FormTextField" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="43" y="6" width="295" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="eSD-6h-JKL"/>
-                                            <constraint firstAttribute="width" constant="206" id="mJ6-SM-xUM"/>
+                                            <constraint firstAttribute="width" constant="295" id="mJ6-SM-xUM"/>
                                         </constraints>
                                         <color key="textColor" name="Text grey"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="txtSize">
-                                                <real key="value" value="16"/>
+                                                <real key="value" value="14"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
@@ -54,15 +54,15 @@
                                     <constraint firstAttribute="height" constant="32" id="F9k-CA-2iA"/>
                                     <constraint firstAttribute="bottom" secondItem="DRK-EB-vxd" secondAttribute="bottom" constant="3" id="LR4-Oj-0vX"/>
                                     <constraint firstItem="4Du-xK-9Cz" firstAttribute="top" secondItem="JBx-0C-JSa" secondAttribute="top" constant="6" id="M7M-Qo-kIn"/>
-                                    <constraint firstItem="4Du-xK-9Cz" firstAttribute="leading" secondItem="DRK-EB-vxd" secondAttribute="trailing" constant="17" id="NVs-Ov-5VO"/>
+                                    <constraint firstItem="4Du-xK-9Cz" firstAttribute="leading" secondItem="DRK-EB-vxd" secondAttribute="trailing" constant="10" id="NVs-Ov-5VO"/>
                                     <constraint firstItem="DRK-EB-vxd" firstAttribute="top" secondItem="JBx-0C-JSa" secondAttribute="top" constant="4" id="Pdg-F6-E0m"/>
-                                    <constraint firstAttribute="width" constant="290" id="Py5-Hb-Jfs"/>
+                                    <constraint firstAttribute="width" constant="338" id="Py5-Hb-Jfs"/>
                                     <constraint firstAttribute="bottom" secondItem="4Du-xK-9Cz" secondAttribute="bottom" constant="5" id="Zmu-fB-uZs"/>
-                                    <constraint firstAttribute="trailing" secondItem="4Du-xK-9Cz" secondAttribute="trailing" constant="34" id="gcC-S0-dIv"/>
+                                    <constraint firstAttribute="trailing" secondItem="4Du-xK-9Cz" secondAttribute="trailing" id="gcC-S0-dIv"/>
                                 </constraints>
                             </view>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sj1-7I-mkD" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
-                                <rect key="frame" x="321" y="10" width="20" height="20"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sj1-7I-mkD" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
+                                <rect key="frame" x="364" y="10" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="Ejb-hp-YJN"/>
                                     <constraint firstAttribute="height" constant="20" id="pay-Fj-Ots"/>
@@ -89,9 +89,9 @@
                             <constraint firstAttribute="height" constant="40" id="MO6-g0-X9r"/>
                             <constraint firstAttribute="bottom" secondItem="sj1-7I-mkD" secondAttribute="bottom" constant="10" id="Wbo-dK-EIV"/>
                             <constraint firstItem="sj1-7I-mkD" firstAttribute="top" secondItem="Etf-qw-z7o" secondAttribute="top" constant="10" id="WnX-Gt-zaB"/>
-                            <constraint firstAttribute="trailing" secondItem="sj1-7I-mkD" secondAttribute="trailing" constant="34" id="jdz-Qm-5xw"/>
-                            <constraint firstItem="sj1-7I-mkD" firstAttribute="leading" secondItem="JBx-0C-JSa" secondAttribute="trailing" constant="8" id="srb-gR-UzQ"/>
-                            <constraint firstItem="JBx-0C-JSa" firstAttribute="centerX" secondItem="Etf-qw-z7o" secondAttribute="centerX" constant="-19.5" id="xkm-7p-hNg"/>
+                            <constraint firstAttribute="trailing" secondItem="sj1-7I-mkD" secondAttribute="trailing" constant="16" id="jdz-Qm-5xw"/>
+                            <constraint firstItem="sj1-7I-mkD" firstAttribute="leading" secondItem="JBx-0C-JSa" secondAttribute="trailing" constant="3" id="srb-gR-UzQ"/>
+                            <constraint firstItem="JBx-0C-JSa" firstAttribute="centerX" secondItem="Etf-qw-z7o" secondAttribute="centerX" constant="-8" id="xkm-7p-hNg"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -110,19 +110,19 @@
                 <outlet property="socialImgView" destination="DRK-EB-vxd" id="MSx-He-xYx"/>
                 <outlet property="socialLbl" destination="4Du-xK-9Cz" id="vZY-ge-43t"/>
             </connections>
-            <point key="canvasLocation" x="54.198473282442748" y="13.380281690140846"/>
+            <point key="canvasLocation" x="73.282442748091597" y="13.380281690140846"/>
         </tableViewCell>
     </objects>
     <designables>
         <designable name="4Du-xK-9Cz">
-            <size key="intrinsicContentSize" width="26" height="20.666666666666668"/>
+            <size key="intrinsicContentSize" width="4" height="18.666666666666668"/>
         </designable>
         <designable name="sj1-7I-mkD">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
         </designable>
     </designables>
     <resources>
-        <image name="LinkedIn" width="72" height="72"/>
+        <image name="LinkedIn" width="512" height="512"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="Secondary Grey">
             <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
