--- a/Kismat App/Storyboard/Base.lproj/Main.storyboard
+++ b/Kismat App/Storyboard/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sub logo text" translatesAutoresizingMaskIntoConstraints="NO" id="W8o-dQ-5UA">
-                                <rect key="frame" x="40" y="184" width="150" height="30"/>
+                                <rect key="frame" x="40" y="175" width="150" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="CBw-ba-s4w"/>
                                     <constraint firstAttribute="width" constant="150" id="tVB-Br-N6A"/>
@@ -202,7 +202,7 @@
                             <constraint firstItem="DzN-e8-nmj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="i2r-c0-ZcR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="OaY-A8-Hb1" secondAttribute="trailing" id="inA-qu-x2M"/>
                             <constraint firstAttribute="bottom" secondItem="OaY-A8-Hb1" secondAttribute="bottom" id="nIE-2T-eV0"/>
-                            <constraint firstItem="W8o-dQ-5UA" firstAttribute="top" secondItem="DzN-e8-nmj" secondAttribute="bottom" constant="11" id="o44-fj-IE3"/>
+                            <constraint firstItem="W8o-dQ-5UA" firstAttribute="top" secondItem="DzN-e8-nmj" secondAttribute="bottom" constant="2" id="o44-fj-IE3"/>
                             <constraint firstItem="Vtk-vg-2KG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-13" id="pZ3-wL-Gd1"/>
                             <constraint firstItem="fcU-6o-oGH" firstAttribute="top" secondItem="Pvv-4i-W02" secondAttribute="bottom" constant="8" symbolic="YES" id="u2K-7I-kUp"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lhD-Tf-j08" secondAttribute="trailing" constant="37" id="uO3-Ae-GS3"/>
@@ -1444,11 +1444,11 @@ and Privacy Policy</string>
                         <color key="selectedImageTintColor" name="Primary Yellow"/>
                     </tabBar>
                     <connections>
-                        <segue destination="x4y-mx-1nw" kind="relationship" relationship="viewControllers" id="t2e-pY-Vox"/>
-                        <segue destination="es6-Sx-s7D" kind="relationship" relationship="viewControllers" id="Imk-Ka-50t"/>
-                        <segue destination="wZg-tK-RbI" kind="relationship" relationship="viewControllers" id="3Z4-Gm-h3P"/>
-                        <segue destination="Uln-CW-fsy" kind="relationship" relationship="viewControllers" id="Ht9-0e-usy"/>
-                        <segue destination="QSV-IC-db0" kind="relationship" relationship="viewControllers" id="HVq-FM-izM"/>
+                        <segue destination="x4y-mx-1nw" kind="relationship" relationship="viewControllers" id="c7Z-5L-9Wq"/>
+                        <segue destination="Uln-CW-fsy" kind="relationship" relationship="viewControllers" id="Tdi-oe-rr3"/>
+                        <segue destination="wZg-tK-RbI" kind="relationship" relationship="viewControllers" id="s2O-gy-6op"/>
+                        <segue destination="es6-Sx-s7D" kind="relationship" relationship="viewControllers" id="bNc-G7-Xsr"/>
+                        <segue destination="QSV-IC-db0" kind="relationship" relationship="viewControllers" id="r51-cZ-spG"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CKN-ox-Ifn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -5999,11 +5999,11 @@ Star user for future highlights</string>
                                                 </userDefinedRuntimeAttributes>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rgP-q2-QAU" customClass="FormTextView" customModule="Kismmet" customModuleProvider="target">
-                                                <rect key="frame" x="6" y="48" width="337" height="85"/>
+                                                <rect key="frame" x="6" y="38" width="337" height="95"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="337" id="0kd-4X-vVX"/>
-                                                    <constraint firstAttribute="height" constant="85" id="wkj-dv-fbA"/>
+                                                    <constraint firstAttribute="height" constant="95" id="wkj-dv-fbA"/>
                                                 </constraints>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -6037,7 +6037,7 @@ Star user for future highlights</string>
                                         <constraints>
                                             <constraint firstItem="7Li-fL-a4f" firstAttribute="leading" secondItem="tpW-6O-QAj" secondAttribute="leading" constant="8" id="02u-6C-HfN"/>
                                             <constraint firstAttribute="height" constant="141" id="9ar-Ai-wuO"/>
-                                            <constraint firstItem="rgP-q2-QAU" firstAttribute="top" secondItem="7Li-fL-a4f" secondAttribute="bottom" constant="8" symbolic="YES" id="9dp-MT-Ocx"/>
+                                            <constraint firstItem="rgP-q2-QAU" firstAttribute="top" secondItem="7Li-fL-a4f" secondAttribute="bottom" constant="-2" id="9dp-MT-Ocx"/>
                                             <constraint firstItem="rgP-q2-QAU" firstAttribute="leading" secondItem="tpW-6O-QAj" secondAttribute="leading" constant="6" id="JDu-KY-P8F"/>
                                             <constraint firstItem="7Li-fL-a4f" firstAttribute="top" secondItem="tpW-6O-QAj" secondAttribute="top" constant="8" id="Qgt-Vj-drl"/>
                                             <constraint firstAttribute="trailing" secondItem="rgP-q2-QAU" secondAttribute="trailing" constant="5" id="gHi-9G-XTa"/>
@@ -6108,6 +6108,7 @@ Star user for future highlights</string>
                         <outlet property="nameLbl" destination="t0O-Wz-4ZT" id="Rch-iN-5Iv"/>
                         <outlet property="proffLbl" destination="lZi-Q7-feI" id="YK0-2u-zNV"/>
                         <outlet property="profilePicIV" destination="hpB-hp-zzh" id="56O-Vb-mIW"/>
+                        <outlet property="viewProfileBtn" destination="fk1-mJ-G7X" id="z6M-QU-lfV"/>
                         <outlet property="workLocLbl" destination="Njm-dn-7ha" id="VnK-1e-ltG"/>
                     </connections>
                 </viewController>
@@ -6908,12 +6909,12 @@ No worries if yes, the other person will not be notified.</string>
         <image name="mail.and.text.magnifyingglass.rtl" catalog="system" width="128" height="90"/>
         <image name="person.circle.fill" catalog="system" width="128" height="123"/>
         <image name="placeholderTxt" width="279" height="44"/>
-        <image name="rockett" width="28" height="28"/>
+        <image name="rockett" width="32" height="32"/>
         <image name="sign-in-with-appple copy2" width="424" height="76"/>
         <image name="sign-in-with-appple2" width="424" height="76"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
-        <image name="sub logo text" width="3270" height="512"/>
+        <image name="sub logo text" width="766" height="44"/>
         <image name="tooltip_icon" width="48" height="48"/>
         <image name="wifi man" width="826" height="1024"/>
         <image name="wifi man grey" width="273" height="338"/>
@@ -6929,7 +6930,7 @@ No worries if yes, the other person will not be notified.</string>
             <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="0.10499999672174454" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Danger">
-            <color red="0.92500001192092896" green="0.30199998617172241" blue="0.30199998617172241" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.92156862745098034" green="0.30196078431372547" blue="0.30196078431372547" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Primary Yellow">
             <color red="1" green="0.72200000286102295" blue="0.27799999713897705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
