--- a/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
+++ b/Kismat App/Views/ViewControllers/ReqConVC/Xibs/TabsHeaderTVCell.xib
@@ -68,7 +68,7 @@
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="medium" weight="semibold"/>
                                         </state>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="REQUESTS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4IN-oq-2Gx" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CONTACTS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4IN-oq-2Gx" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="67" y="9" width="267" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="FVO-jR-4HO"/>
@@ -291,13 +291,13 @@
     </objects>
     <designables>
         <designable name="4IN-oq-2Gx">
-            <size key="intrinsicContentSize" width="147" height="36.666666666666664"/>
+            <size key="intrinsicContentSize" width="88.333333333333329" height="20.333333333333332"/>
         </designable>
         <designable name="amq-6n-jaK">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="gjT-fS-ZUo">
-            <size key="intrinsicContentSize" width="53.666666666666664" height="15.333333333333334"/>
+            <size key="intrinsicContentSize" width="52" height="16.666666666666668"/>
         </designable>
     </designables>
     <resources>
